--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<script src="myscripts.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="myscripts.js" defer></script>
+</head>
+<body>
+<div class="game-window">
+    <div class="button-container">
+        <div class="button">Rock</div>
+        <div class="button">Paper</div>
+        <div class="button">Scissors</div>
+    </div>
+</div>
+</body>
+</html>
