--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="game-window">
     <div class="button-container">
-        <div class="button">Rock</div>
-        <div class="button">Paper</div>
-        <div class="button">Scissors</div>
+        <div class="button" data-choice="rock">Rock</div>
+        <div class="button" data-choice="paper">Paper</div>
+        <div class="button" data-choice="scissors">Scissors</div>
     </div>
 </div>
 </body>
