--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 <div class="game-window">
+    <div id="result-container"></div>
+    <div class="score-container">
+        <div class="human-score-container">Human:
+            <div id="human-score"></div>
+        </div>
+        <div class="computer-score-container"> Computer:
+            <div id="computer-score"></div>
+        </div>
+    </div>
     <div class="button-container">
         <div class="button" data-choice="rock">Rock</div>
         <div class="button" data-choice="paper">Paper</div>
